--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@ p {
 
 .card.card-profile-horizontal .image-side {
   margin-right: 32px;
+  min-width: 270px;
 }
 
 .card.card-profile-horizontal .image-side img {
@@ -69,12 +70,15 @@ p {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.card.card-profile-side .image-side {
   margin-bottom: 22px;
 }
 
-.card.card-profile-side img {
-  max-width: 350px;
-  height: 350px;
+.card.card-profile-side .image-side img {
+  max-width: 345px;
+  height: 345px;
 }
 
 .card.card-profile-side .content .content-header {
@@ -164,5 +168,82 @@ p {
   font-size: 18px;
   line-height: 22px;
   color: #828282;
+}
+
+.card.skills {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 395px;
+}
+
+.card.skills .skills-header {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  text-transform: uppercase;
+  color: #4f4f4f;
+  margin-bottom: 15px;
+}
+
+.card.skills .skills-content ul {
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+}
+
+.card.skills .skills-content ul li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 16px;
+}
+
+.card.skills .skills-content ul li:last-child {
+  margin-bottom: 0;
+}
+
+.card.skills .skills-content ul li p {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  color: #4f4f4f;
+}
+
+.card.skills .skills-content ul li .skill-container {
+  height: 10px;
+  width: 220px;
+  background: #c4c4c4;
+  border-radius: 12px;
+}
+
+.card.skills .skills-content ul li .skill-container .skill-value {
+  height: 10px;
+  background: rgba(47, 128, 237, 0.7);
+  border-radius: 12px;
+}
+
+.card.skills .skills-content ul li .skill-container .skill-value.javascript {
+  width: 60%;
+}
+
+.card.skills .skills-content ul li .skill-container .skill-value.css {
+  width: 90%;
+}
+
+.card.skills .skills-content ul li .skill-container .skill-value.react {
+  width: 55%;
+}
+
+.card.skills .skills-content ul li .skill-container .skill-value.gatsbyjs {
+  width: 75%;
 }
 /*# sourceMappingURL=style.css.map */
