--- a/styles/style.scss
+++ b/styles/style.scss
@@ -42,6 +42,7 @@ p {
 
     .image-side {
       margin-right: 32px;
+      min-width: 270px;
 
       img {
         max-width: 270px;
@@ -59,11 +60,14 @@ p {
   &.card-profile-side {
     max-width: 395px;
     flex-direction: column;
-    margin-bottom: 22px;
 
-    img {
-      max-width: 350px;
-      height: 350px;
+    .image-side {
+      margin-bottom: 22px;
+
+      img {
+        max-width: 345px;
+        height: 345px;
+      }
     }
 
     .content {
@@ -135,6 +139,81 @@ p {
         font-size: 18px;
         line-height: 22px;
         color: #828282;
+      }
+    }
+  }
+
+  &.skills {
+    flex-direction: column;
+    max-width: 395px;
+
+    .skills-header {
+      font-weight: bold;
+      font-size: 18px;
+      line-height: 22px;
+      text-transform: uppercase;
+      color: #4f4f4f;
+      margin-bottom: 15px;
+    }
+
+    .skills-content {
+      ul {
+        margin: 0;
+        list-style-type: none;
+        padding: 0;
+
+        &.list-skills {
+        }
+
+        li {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          margin-bottom: 16px;
+
+          &:last-child {
+            margin-bottom: 0;
+          }
+
+          &.skill {
+          }
+
+          p {
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 20px;
+            color: #4f4f4f;
+          }
+
+          .skill-container {
+            height: 10px;
+            width: 220px;
+            background: #c4c4c4;
+            border-radius: 12px;
+
+            .skill-value {
+              height: 10px;
+              background: rgba(47, 128, 237, 0.7);
+              border-radius: 12px;
+
+              &.javascript {
+                width: 60%;
+              }
+
+              &.css {
+                width: 90%;
+              }
+
+              &.react {
+                width: 55%;
+              }
+
+              &.gatsbyjs {
+                width: 75%;
+              }
+            }
+          }
+        }
       }
     }
   }
